    of a matrix. For example if x is a NumericMatrix, x(_,i) returns the same
    as x.column(i) and x(i,_) returns the same as x.row(i)
    
    * inst/unitTests/runit.Matrix.R: unit tests for the above<
    
    * inst/include/Rcpp/sugar/functions/sum.h: the sugar version of sum 
    now takes care of missing values correctly
    
2010-10-21  Romain Francois <romain@r-enthusiasts.com>

    * inst/include/Rcpp/vector/MatrixColumn.h: Fixed indexing bug (mismatch 
    between number of rows and number of columns
    
    * inst/unitTests/runit.Matrix.R: test the fix above based on the 
    R-help/Rcpp-devel thread: http://article.gmane.org/gmane.comp.lang.r.rcpp/851
    
    * inst/include/Rcpp/vector/MatrixColumn.h: Column gains a operator= taking a 
    sugar expression. Faster indexing (caching the pointer instead of calling
    nrow many times)
    
    * inst/include/Rcpp/vector/Matrix.h: first pass at making matrix indexing 
    faster
    
2010-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Module.h: Reorder instantiation for class_ 

2010-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* include/Rcpp/XPtr.h: Applied patch by Karl Millar
	* include/Rcpp/vector/Vector.h): Idem

2010-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/posixt.cpp: Correct POSIXct, POSIXt ordering for R 2.12.0

2010-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.8.7

        * debian/*: Similarly updated for new release to Debian

2010-10-10  Romain Francois <romain@r-enthusiasts.com>

	* tests/doRUnit.R: workaround to disable tests on windows 64 until we can
	  figure out what upsets R CMD check.

	* R/Module.R: expose the finalizer

2010-10-07  John M Chambers  <jmc@r-project.org>

	* R/Module.R: modify cpp_refMethods to substitute the .External
	directly with the method and class pointers.

2010-10-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/stats/random/r*: Added comment reminding users