@@ -1,6 +1,6 @@
 // -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; tab-width: 8 -*-
 //
-// sum.h: Rcpp R/C++ interface class library -- sum
+// cumsum.h: Rcpp R/C++ interface class library -- cumsum
 //
 // Copyright (C) 2010 Dirk Eddelbuettel and Romain Francois
 //
@@ -19,49 +19,33 @@
 // You should have received a copy of the GNU General Public License
 // along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-#ifndef Rcpp__sugar__sum_h
-#define Rcpp__sugar__sum_h
+#ifndef Rcpp__sugar__cumsum_h
+#define Rcpp__sugar__cumsum_h
 
 namespace Rcpp{
 namespace sugar{
-
+	
 template <int RTYPE, bool NA, typename T>
-class Sum : public Lazy< typename Rcpp::traits::storage_type<RTYPE>::type , Sum<RTYPE,NA,T> > {
+class Cumsum : public Lazy< Rcpp::Vector<RTYPE> , Cumsum<RTYPE,NA,T> > {
 public:
 	typedef typename Rcpp::VectorBase<RTYPE,NA,T> VEC_TYPE ;
 	typedef typename Rcpp::traits::storage_type<RTYPE>::type STORAGE ;
+	typedef Rcpp::Vector<RTYPE> VECTOR ;
 	
-	Sum( const VEC_TYPE& object_ ) : object(object_){}
+	Cumsum( const VEC_TYPE& object_ ) : object(object_){}
 	
-	STORAGE get() const {
-		STORAGE result = 0 ;
-		int n = object.size() ;
-		STORAGE current ;
-		for( int i=0; i<n; i++){
+	VECTOR get() const {
+	    int n = object.size() ;
+		VECTOR result( n, Rcpp::traits::get_na<RTYPE>() ) ; 
+		STORAGE current = object[0] ;
+		if( Rcpp::traits::is_na<RTYPE>(current) ) 
+		    return result ;
+		result[0] = current ;
+		for( int i=1; i<n; i++){
 		    current = object[i] ;
 		    if( Rcpp::traits::is_na<RTYPE>(current) ) 
-		        return Rcpp::traits::get_na<RTYPE>() ;
-		    result += current ;
-		}
-		return result ;
-	}         
-private:
-	const VEC_TYPE& object ;
-} ;
-
-template <int RTYPE, typename T>
-class Sum<RTYPE,false,T> : public Lazy< typename Rcpp::traits::storage_type<RTYPE>::type , Sum<RTYPE,false,T> > {
-public:
-	typedef typename Rcpp::VectorBase<RTYPE,false,T> VEC_TYPE ;
-	typedef typename Rcpp::traits::storage_type<RTYPE>::type STORAGE ;
-	
-	Sum( const VEC_TYPE& object_ ) : object(object_){}
-	
-	STORAGE get() const {
-		STORAGE result = 0 ;
-		int n = object.size() ;
-		for( int i=0; i<n; i++){
-		    result += object[i] ;
+		        return result ;
+		    result[i] = result[i-1] + current ;
 		}
 		return result ;
 	}         
@@ -72,13 +56,13 @@ private:
 } // sugar
 
 template <bool NA, typename T>
-inline sugar::Sum<INTSXP,NA,T> sum( const VectorBase<INTSXP,NA,T>& t){
-	return sugar::Sum<INTSXP,NA,T>( t ) ;
+inline sugar::Cumsum<INTSXP,NA,T> cumsum( const VectorBase<INTSXP,NA,T>& t){
+	return sugar::Cumsum<INTSXP,NA,T>( t ) ;
 }
 
 template <bool NA, typename T>
-inline sugar::Sum<REALSXP,NA,T> sum( const VectorBase<REALSXP,NA,T>& t){
-	return sugar::Sum<REALSXP,NA,T>( t ) ;
+inline sugar::Cumsum<REALSXP,NA,T> cumsum( const VectorBase<REALSXP,NA,T>& t){
+	return sugar::Cumsum<REALSXP,NA,T>( t ) ;
 }
 
 
